set up php sessions

--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -25,6 +25,12 @@
 	border-color: var(--clemson-orange);
 }
 
+.btn-clemson-alt {
+	color: var(--fort-hill);
+	background-color: var(--regalia);
+	border-color: var(--regalia);
+}
+
 .jumbotron-clemson{
 	background-color: var(--regalia-light);
 }
