cleaned up a bit. Ready to start on role-based nav bars.

--- a/public_html/views/header/header.html
+++ b/public_html/views/header/header.html
@@ -1,4 +1,4 @@
-<div class="page-header">
+<div ng-controller="HeaderCtrl" class="page-header">
   <div class="container">
     <div class="row">
       <h1 class="col-8">{{title}}</h1>
