--- a/public_html/views/home/home.html
+++ b/public_html/views/home/home.html
@@ -1,7 +1,3 @@
 <div class="container">
-  <div>{{homeSession}}</div>
-  <div>THIS IS YOUR HOME NOW</div>
-  <div ng-if="session.signedIn">
-    <div>{{session.username}}</div>
-  </div>
+  <h1>HOME</h1>
 </div>
