--- a/public_html/views/header/header.html
+++ b/public_html/views/header/header.html
@@ -13,7 +13,9 @@
   <div ng-if="session.signedIn" class="custom-navbar">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#!home">{{brand}}</a>
+        <a ng-if="session.role=='user'" class="navbar-brand" href="#!userHome">{{brand}}</a>
+        <a ng-if="session.role=='manager'" class="navbar-brand" href="#!managerHome">{{brand}}</a>
+        <a ng-if="session.role=='admin'" class="navbar-brand" href="#!adminHome">{{brand}}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +24,7 @@
           <!-- User Navbar Links --> 
           <ul ng-if="session.role == 'user'" class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#!home">Home</a>
+                <a class="nav-link" href="#!userHome">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#!availableInstruments">Instruments</a>
@@ -32,7 +34,7 @@
           <!-- Manager Navbar Links --> 
           <ul ng-if="session.role == 'manager'" class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#!home">Home</a>
+                <a class="nav-link" href="#!managerHome">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#!allInstruments">Instruments</a>
@@ -51,7 +53,7 @@
           <!-- Admin Navbar Links --> 
           <ul ng-if="session.role == 'admin'" class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#!home">Home</a>
+                <a class="nav-link" href="#!adminHome">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#!manageUsers">Manage Users</a>
