added instruments page templates. removed session service from home page controllers.

--- a/public_html/views/header/header.html
+++ b/public_html/views/header/header.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#!userHome">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#!availableInstruments">Instruments</a>
+                <a class="nav-link" href="#!instruments?status=available">Instruments</a>
               </li>
           </ul>
 
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="#!managerHome">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#!allInstruments">Instruments</a>
+                <a class="nav-link" href="#!instruments">Instruments</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#!addInstrument">Add Instrument</a>
