implemented instruments page. Needs database hookup and then testing.

--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -18,10 +18,16 @@
 	padding-bottom: 1rem;
 }
 
-.btn-clemson {
+.btn-clemson-orange {
 	color: var(--fort-hill);
 	background-color: var(--clemson-orange);
 	border-color: var(--clemson-orange);
+}
+
+.btn-clemson-purple{
+	color: var(--fort-hill);
+	background-color: var(--regalia);
+	border-color: var(--regalia);
 }
 
 .btn-clemson-alt {
