implemented add instrument form

--- a/public_html/views/login/login.html
+++ b/public_html/views/login/login.html
@@ -24,7 +24,7 @@
                 <input type="password" id="si-password" class="form-control" ng-model="signInForm.password">
               </div>
             </div>
-            <input type="submit" value="Sign In" class="btn btn-clemson">
+            <input type="submit" value="Sign In" class="btn btn-clemson-orange">
           </form>
         </div>
       </div>
@@ -76,7 +76,7 @@
                 <input type="password" id="su-confirm-password" class="form-control" ng-model="signUpForm.passwordConfirm">
               </div>
             </div>
-            <input type="submit" value="Sign Up" class="btn btn-clemson">
+            <input type="submit" value="Sign Up" class="btn btn-clemson-orange">
           </form>
         </div>
       </div>
