--- a/public_html/views/addInstrument/addInstrument.html
+++ b/public_html/views/addInstrument/addInstrument.html
@@ -1,4 +1,34 @@
 <div class="container">
-  <h1>ADD INSTRUMENT</h1>
-  <h3>{{message}}</h2>
+  <div class="row">
+    <div class="col-12">
+      <div class="card card-clemson">
+        <div class="card-header">
+          <h2>Add Instrument</h2>
+        </div>
+        <div class="card-body">
+          <form class="form" id="add-inst-form" ng-submit="submitForm()" ng-model-options="{debounce:200}">
+            <div class="form-group row">
+              <label for="aif-serial-no" class="col-md-3 col-form-label">Serial Number:</label>
+              <div class="col-md-9">
+                <input ng-model="addInstForm.serialNo"  ng-change="validate()" type="text" id="aif-serial-no" class="form-control">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="aif-type" class="col-md-3 col-form-label">Type:</label>
+              <div class="col-md-9">
+                <input ng-model="addInstForm.type"  ng-change="validate()" type="text" id="aif-type" class="form-control">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="aif-condition" class="col-md-3 col-form-label">Condition:</label>
+              <div class="col-md-9">
+                <input ng-model="addInstForm.condition"  ng-change="validate()" type="text" id="aif-condition" class="form-control">
+              </div>
+            </div>
+            <input type="submit" ng-disabled="!valid" value="Add Instrument" class="btn btn-clemson-orange">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
