--- a/public_html/views/instruments/instruments.html
+++ b/public_html/views/instruments/instruments.html
@@ -48,7 +48,7 @@
     </div>
   </div>
 
-  <div>
+  <div class="row">
     <table class="table mt-4">
       <thead>
         <tr>
@@ -68,6 +68,7 @@
           <td>
               <button ng-if='inst.available && session.role=="user"' ng-click="checkOutInstrument(inst.serial_no)" class="btn btn-clemson-orange">Check Out</button>
               <button ng-if='!inst.available && session.role=="manager"' ng-click="checkInInstrument(inst.serial_no)" class="btn btn-clemson-purple">Check In</button>
+              <button ng-if='inst.available && session.role=="manager"' ng-click="deleteInstrument(inst.serial_no)" class="btn btn-danger">Delete</button>
           </td>
         </tr>
       </tbody>
