--- a/public_html/views/contracts/contracts.html
+++ b/public_html/views/contracts/contracts.html
@@ -1,4 +1,67 @@
 <div class="container">
-  <h1>CONTRACTS</h1>
-  <h3>{{message}}</h2>
+  <div class="row">
+    <h2>Manage Contracts</h2>
+  </div>
+
+  <div class="row">
+    <div class="col-12">
+      <div class="card card-clemson">
+        <div class="card-body">
+          <form class="form" id="contracts-form">
+            <div class="form-group row">
+              <label for="cf-search" class="col-md-2 col-form-label">Search:</label>
+              <div class="col-md-10">
+                <input ng-model="filterForm.search" ng-model-options="{debounce: 200}" ng-change="getContracts()" type="text" id="cf-search" class="form-control">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="cf-status" class="col-md-2 col-form-label">Status:</label>
+              <div class="col-md-10">
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input ng-model="filterForm.showActive" ng-change="getContracts()" class="form-check-input" type="checkbox">&nbsp;Active&nbsp;
+                  </label>
+                  <label class="form-check-label">
+                    <input ng-model="filterForm.showPending" ng-change="getContracts()" class="form-check-input" type="checkbox">&nbsp;Pending&nbsp;
+                  </label>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <table class="table mt-4">
+      <thead>
+        <tr>
+          <th>Start</th>
+          <th>End</th>
+          <th>CUID</th>
+          <th>Username</th>
+          <th>Serial No</th>
+          <th>Inst. Type</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat='c in contracts'>
+          <td>{{c.start}}</td>
+          <td>{{c.end}}</td>
+          <td>{{c.cuid}}</td>
+          <td>{{c.username}}</td>
+          <td>{{c.serial_no}}</td>
+          <td>{{c.type}}</td>
+          <td>
+            <button ng-if="c.status == 'pending'" ng-click="approveRequest(c.cuid, c.serial_no)" class="btn btn-clemson-purple">Approve</button>
+            <button ng-if="c.status == 'pending'" ng-click="denyRequest(c.cuid, c.serial_no)" class="btn btn-danger">Deny</button>
+            <button ng-if="c.status == 'active'" ng-click="endContract(c.serial_no)" class="btn btn-danger">Terminate</button>
+          </td>
+        </tr>
+      </tbody> 
+    </table>
+  </div>
+    
 </div>
