--- a/public_html/views/header/header.html
+++ b/public_html/views/header/header.html
@@ -43,10 +43,7 @@
                 <a class="nav-link" href="#!addInstrument">Add Instrument</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#!contracts?status=pending">Pending Contracts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#!contracts?status=active">Active Contracts</a>
+                <a class="nav-link" href="#!contracts">Contracts</a>
               </li>
           </ul>
 
