--- a/public_html/views/userHome/userHome.html
+++ b/public_html/views/userHome/userHome.html
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="row">
-   <h2>Welcome, {{session.username}}</h2>
+    <div class="col-md-10">
+      <h2>Welcome, {{session.username}}</h2>
+    </div>
+    <div class="col-md-2">
+      <button ng-click="editProfile()" class="btn btn-clemson-orange">Edit Profile</button>
+    </div>
   </div>
   
   <div class="row mt-4">
