--- a/public_html/views/instruments/instruments.html
+++ b/public_html/views/instruments/instruments.html
@@ -64,10 +64,10 @@
           <td>{{inst.serial_no}}</td>
           <td>{{inst.type}}</td>
           <td>{{inst.cond}}</td>
-          <td ng-if="session.role == 'manager'">{{inst.available}}</td>
+          <td ng-if="session.role == 'manager'">{{inst.available ? 'yes' : 'no'}}</td>
           <td>
               <button ng-if='inst.available && session.role=="user"' ng-click="checkOutInstrument(inst.serial_no, inst.cond, inst.type)" class="btn btn-clemson-orange">Check Out</button>
-              <button ng-if='!inst.available && session.role=="manager"' ng-click="editInstrument(inst.serial_no)" class="btn btn-clemson-purple">Edit</button>
+              <button ng-if='session.role=="manager"' ng-click="editInstrument(inst.serial_no)" class="btn btn-clemson-purple">Edit</button>
               <button ng-if='inst.available && session.role=="manager"' ng-click="deleteInstrument(inst.serial_no)" class="btn btn-danger">Delete</button>
           </td>
         </tr>
