--- a/public_html/views/addInstrument/addInstrument.html
+++ b/public_html/views/addInstrument/addInstrument.html
@@ -10,7 +10,7 @@
             <div class="form-group row">
               <label for="aif-serial-no" class="col-md-3 col-form-label">Serial Number:</label>
               <div class="col-md-9">
-                <input ng-model="addInstForm.serialNo"  ng-change="validate()" type="text" id="aif-serial-no" class="form-control">
+                <input ng-model="addInstForm.serial_no"  ng-change="validate()" type="text" id="aif-serial-no" class="form-control">
               </div>
             </div>
             <div class="form-group row">
@@ -22,7 +22,7 @@
             <div class="form-group row">
               <label for="aif-condition" class="col-md-3 col-form-label">Condition:</label>
               <div class="col-md-9">
-                <input ng-model="addInstForm.condition"  ng-change="validate()" type="text" id="aif-condition" class="form-control">
+                <input ng-model="addInstForm.cond"  ng-change="validate()" type="text" id="aif-condition" class="form-control">
               </div>
             </div>
             <input type="submit" ng-disabled="!valid" value="Add Instrument" class="btn btn-clemson-orange">
