add user hits db now.

--- a/public_html/views/addUser/addUser.html
+++ b/public_html/views/addUser/addUser.html
@@ -14,7 +14,7 @@
             <div class="form-group row">
               <label for="au-email" class="col-md-3 col-form-label">Clemson Email</label>
               <div class="col-md-9">
-                <input type="email" id="au-email" class="form-control" ng-model="addUserForm.cuEmail" ng-change="validate()">
+                <input type="email" id="au-email" class="form-control" ng-model="addUserForm.email" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
@@ -26,13 +26,13 @@
             <div class="form-group row">
               <label for="au-fname" class="col-md-3 col-form-label">First Name</label>
               <div class="col-md-9">
-                <input type="text" id="au-fname" class="form-control" ng-model="addUserForm.firstName" ng-change="validate()">
+                <input type="text" id="au-fname" class="form-control" ng-model="addUserForm.first_name" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
               <label for="au-lname" class="col-md-3 col-form-label">Last Name</label>
               <div class="col-md-9">
-                <input type="text" id="au-lname" class="form-control" ng-model="addUserForm.lastName" ng-change="validate()">
+                <input type="text" id="au-lname" class="form-control" ng-model="addUserForm.last_name" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
@@ -44,7 +44,7 @@
             <div class="form-group row">
               <label for="au-confirm-password" class="col-md-3 col-form-label">Confirm Password</label>
               <div class="col-md-9">
-                <input type="password" id="au-confirm-password" class="form-control" ng-model="addUserForm.passwordConfirm" ng-change="validate()">
+                <input type="password" id="au-confirm-password" class="form-control" ng-model="addUserForm.password_confirm" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
