edit user hits db now

--- a/public_html/views/editUser/editUser.html
+++ b/public_html/views/editUser/editUser.html
@@ -14,7 +14,7 @@
             <div class="form-group row">
               <label for="eu-email" class="col-md-3 col-form-label">Clemson Email</label>
               <div class="col-md-9">
-                <input type="email" id="eu-email" class="form-control" ng-model="editUserForm.cuEmail" ng-change="validate()">
+                <input type="email" id="eu-email" class="form-control" ng-model="editUserForm.email" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
@@ -26,13 +26,13 @@
             <div class="form-group row">
               <label for="eu-fname" class="col-md-3 col-form-label">First Name</label>
               <div class="col-md-9">
-                <input type="text" id="eu-fname" class="form-control" ng-model="editUserForm.firstName" ng-change="validate()">
+                <input type="text" id="eu-fname" class="form-control" ng-model="editUserForm.first_name" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
               <label for="eu-lname" class="col-md-3 col-form-label">Last Name</label>
               <div class="col-md-9">
-                <input type="text" id="eu-lname" class="form-control" ng-model="editUserForm.lastName" ng-change="validate()">
+                <input type="text" id="eu-lname" class="form-control" ng-model="editUserForm.last_name" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
@@ -45,7 +45,7 @@
             <div class="form-group row">
               <label for="eu-confirm-password" class="col-md-3 col-form-label">Confirm Password</label>
               <div class="col-md-9">
-                <input type="password" id="eu-confirm-password" class="form-control" ng-model="editUserForm.passwordConfirm" ng-change="validate()">
+                <input type="password" id="eu-confirm-password" class="form-control" ng-model="editUserForm.password_confirm" ng-change="validate()">
                 <small id="pwdConfHelp" class="form-text text-muted">Leave blank to keep current password.</small>
               </div>
             </div>
