--- a/public_html/views/makeRequest/makeRequest.html
+++ b/public_html/views/makeRequest/makeRequest.html
@@ -26,13 +26,13 @@
             <div class="form-group row">
               <label for="rir-start" class="col-md-3 col-form-label">Contract Start</label>
               <div class="col-md-9">
-                <input type="date" id="rir-start" class="form-control" ng-model="instReqForm.start" ng-change="validate()">
+                <input type="date" id="rir-start" class="form-control" ng-model="instReqForm.start_date" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
               <label for="rir-end" class="col-md-3 col-form-label">Contract End</label>
               <div class="col-md-9">
-                <input type="date" id="rir-end" class="form-control" ng-model="instReqForm.end" ng-change="validate()">
+                <input type="date" id="rir-end" class="form-control" ng-model="instReqForm.end_date" ng-change="validate()">
               </div>
             </div>
             <input ng-disabled="!valid" type="submit" value="Update" class="btn btn-clemson-orange">
