--- a/public_html/views/addUser/addUser.html
+++ b/public_html/views/addUser/addUser.html
@@ -7,7 +7,8 @@
           <form class="form" id="au-form" ng-submit="submitForm()" ng-model-options="{debounce:200}">
             <div class="form-group row">
               <label for="au-cuid" class="col-md-3 col-form-label">CUID</label>
-              <div class="col-md-9">
+              <div class="col-md-9 input-group">
+                <div class="input-group-addon">C</div>
                 <input type="number" id="au-cuid" class="form-control" ng-model="addUserForm.cuid" ng-change="validate()">
               </div>
             </div>
