--- a/public_html/views/editProfile/editProfile.html
+++ b/public_html/views/editProfile/editProfile.html
@@ -8,19 +8,19 @@
             <div class="form-group row">
               <label for="ep-email" class="col-md-3 col-form-label">Clemson Email</label>
               <div class="col-md-9">
-                <input type="email" id="ep-email" class="form-control" ng-model="editUserForm.cuEmail" ng-change="validate()">
+                <input type="email" id="ep-email" class="form-control" ng-model="editUserForm.email" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
               <label for="ep-fname" class="col-md-3 col-form-label">First Name</label>
               <div class="col-md-9">
-                <input type="text" id="ep-fname" class="form-control" ng-model="editUserForm.firstName" ng-change="validate()">
+                <input type="text" id="ep-fname" class="form-control" ng-model="editUserForm.first_name" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
               <label for="ep-lname" class="col-md-3 col-form-label">Last Name</label>
               <div class="col-md-9">
-                <input type="text" id="ep-lname" class="form-control" ng-model="editUserForm.lastName" ng-change="validate()">
+                <input type="text" id="ep-lname" class="form-control" ng-model="editUserForm.last_name" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
@@ -32,7 +32,7 @@
             <div class="form-group row">
               <label for="ep-telephone" class="col-md-3 col-form-label">Telephone</label>
               <div class="col-md-9">
-                <input type="text" id="ep-telephone" class="form-control" ng-model="editUserForm.telephone" ng-change="validate()">
+                <input type="text" id="ep-telephone" class="form-control" ng-model="editUserForm.phone" ng-change="validate()">
               </div>
             </div>
             <div class="form-group row">
