Got rid of filler text on login. made 'request pending' button on user instrument page.

--- a/public_html/views/login/login.html
+++ b/public_html/views/login/login.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div id="info-bar" class="jumbotron jumbotron-clemson"> 
     <h2>{{informationalTitle}}</h2>
-    <p>Phasellus at egestas nisi. Nunc posuere sagittis ultrices. Vestibulum molestie odio et velit malesuada, at egestas ante congue. Ut euismod leo turpis, id finibus eros volutpat at. Suspendisse at lectus vel leo fermentum ultricies. Nam nec vulputate lectus. Fusce ligula massa, ultrices ut neque ac, iaculis imperdiet lorem. Proin facilisis egestas lorem, non pretium lectus porttitor vel. Vestibulum ac quam iaculis, aliquam mauris ut, hendrerit nisi. Phasellus eget mauris non mauris vulputate ullamcorper a id nunc. Quisque semper nulla vitae dui convallis lobortis. Suspendisse potenti. Donec interdum non libero congue gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p>{{informationalText}}</p>
   </div>
 </div>
 
