--- a/public_html/views/instruments/instruments.html
+++ b/public_html/views/instruments/instruments.html
@@ -66,7 +66,8 @@
           <td>{{inst.cond}}</td>
           <td ng-if="session.role == 'manager'">{{inst.available ? 'yes' : 'no'}}</td>
           <td>
-              <button ng-if='inst.available && session.role=="user"' ng-click="checkOutInstrument(inst.serial_no, inst.cond, inst.type)" class="btn btn-clemson-orange">Check Out</button>
+              <button ng-if='inst.available && session.role=="user" && !inst.hasPendingContract' ng-click="checkOutInstrument(inst.serial_no, inst.cond, inst.type)" class="btn btn-clemson-orange">Check Out</button>
+              <button ng-if='inst.available && session.role=="user" && inst.hasPendingContract' ng-disabled="true" class="btn btn-clemson-orange">Request Pending</button>
               <button ng-if='session.role=="manager"' ng-click="editInstrument(inst.serial_no)" class="btn btn-clemson-purple">Edit</button>
               <button ng-if='inst.available && !inst.pending && session.role=="manager"' ng-click="deleteInstrument(inst.serial_no)" class="btn btn-danger">Delete</button>
           </td>
