--- a/public_html/views/addInstrument/addInstrument.html
+++ b/public_html/views/addInstrument/addInstrument.html
@@ -22,7 +22,14 @@
             <div class="form-group row">
               <label for="aif-condition" class="col-md-3 col-form-label">Condition:</label>
               <div class="col-md-9">
-                <input ng-model="addInstForm.cond"  ng-change="validate()" type="text" id="aif-condition" class="form-control">
+                <select id="aif-condition" class="form-control" ng-model="addInstForm.cond" ng-change="validate()">
+                  <option value="">-- Select a condition --</option>
+                  <option value="needs repair">needs repair</option>
+                  <option value="poor">poor</option>
+                  <option value="fair">fair</option>
+                  <option value="fair">good</option>
+                  <option value="fair">new</option>
+                </select>
               </div>
             </div>
             <input type="submit" ng-disabled="!valid" value="Add Instrument" class="btn btn-clemson-orange">
